--- a/assignAssignmentTask.html
+++ b/assignAssignmentTask.html
@@ -27,6 +27,16 @@
         border: 1px solid #ccc;
         padding: 10px;
       }
+      input[type="file"] {
+        width: 100%; /* Ensures full width */
+        padding: 10px 0; /* Better tap area */
+      }
+      /* Responsive design improvements */
+      @media (max-width: 768px) {
+        .form-control-file {
+          padding: 15px 0;
+        }
+      }
     </style>
   </head>
   <body>
