--- a/notificationCRUD.html
+++ b/notificationCRUD.html
@@ -27,7 +27,7 @@
                 class="btn btn-primary btn-block mb-3"
                 >Create Notification</a
               >
-              <a href="viewNotification.html" class="btn btn-primary btn-block"
+              <a href="notification_list.html" class="btn btn-primary btn-block"
                 >View Notification</a
               >
             </div>
