--- a/adminMain.html
+++ b/adminMain.html
@@ -35,11 +35,7 @@
                 class="btn btn-primary btn-block mb-3 notification-btn"
                 >Send Notification</a
               >
-              <a
-                href="#"
-                class="btn btn-primary btn-block mb-3 approve-student-info-btn"
-                >Approve Student Information</a
-              >
+
               <a href="timetable.html" class="btn btn-primary btn-block mb-3"
                 >Timetable</a
               >
@@ -57,6 +53,12 @@
                 href="addLocation.html"
                 class="btn btn-primary btn-block mb-3 location-btn"
                 >Add Location</a
+              >
+              <a
+                href="#"
+                class="btn btn-secondary btn-block mb-3"
+                id="logoutBtn"
+                >Log Out</a
               >
             </div>
           </div>
@@ -83,6 +85,14 @@
       };
       firebase.initializeApp(firebaseConfig);
       const db = firebase.firestore();
+
+      function logout() {
+        // Clear the saved login ID from local storage
+        localStorage.removeItem("saveLoginID");
+
+        // Redirect the user to the login page
+        window.location.href = "index.html";
+      }
 
       document.addEventListener("DOMContentLoaded", function () {
         const loggedInUser = localStorage.getItem("saveLoginID");
@@ -127,6 +137,8 @@
           .catch((error) => {
             console.error("Error fetching user data:", error);
           });
+
+        document.getElementById("logoutBtn").addEventListener("click", logout);
       });
     </script>
   </body>
